<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
        android:paddingTop="10dp">


    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">
        <TextView android:id="@+id/emergency_message_header"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:text="@string/emergency_message_header"
                >
        </TextView>
        <TextView android:id="@+id/characters_left_view"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:layout_alignParentRight="true"
                />
    </RelativeLayout>

    <RelativeLayout android:layout_width="fill_parent"
                  android:layout_height="130dp"

                  >

    <EditText
            android:id="@+id/message_edit_text"
            android:layout_height="130dp"
            android:layout_width="fill_parent"
            android:hint="@string/enter_message_hint"
            android:text="@string/default_emergency_message"
            android:inputType="textMultiLine"
            style="@style/message_box"/>



        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/i_am_at"
                  style="@style/i_am_at_text"/>



    </RelativeLayout>


</LinearLayout>
