<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/wizard_start_root"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              style="@style/wizard_static_panel"
              android:orientation="vertical"
        >
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/finish_label"
              android:textSize="18dp"
              android:paddingBottom="5dp"/>

    <View android:layout_height="1sp"
          android:layout_width="match_parent"
          style="@style/wizard_title_sep"
            />
    <TextView android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:text="@string/finish_detail"
              style="@style/welcome_screen_text"/>

    <Button android:text="@string/finish_button_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/save_button"/>
</LinearLayout>