<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wizard_start_root"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/wizard_static_panel"
        android:orientation="vertical"
        >

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_training_contacts_title"
            style="@style/wizard_page_title"
            android:id="@+id/title" />


        <View android:layout_height="1dp"
            android:layout_width="match_parent"
            style="@style/wizard_title_sep"
            />



        <TextView android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/wizard_training_contacts_details"
            style="@style/welcome_screen_text"
            android:layout_marginBottom="20dp"
            android:paddingTop="0dp"
            android:id="@+id/content_body" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/first_contact"
                style="@style/contact_number" />
            <fragment android:name="com.apb.beacon.common.ContactPickerFragment"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:id="@+id/first_contact"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:text="@string/second_contact"
                style="@style/contact_number" />
            <fragment android:name="com.apb.beacon.common.ContactPickerFragment"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:id="@+id/second_contact"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:text="@string/third_contact"
                style="@style/contact_number" />
            <fragment android:name="com.apb.beacon.common.ContactPickerFragment"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:id="@+id/third_contact"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
