<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/twitter_short_code_fragment_root"
              android:orientation="vertical"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent">
    <Spinner
            android:id="@+id/country_spinner"
            android:contentDescription="@string/country_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    <Spinner
            android:id="@+id/service_provider_spinner"
            android:contentDescription = "@string/service_provider_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout android:id="@+id/twitter_short_code_layout"
                  android:orientation="vertical"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:visibility="invisible">
        <TextView android:id="@+id/twitter_help_text"
                  android:text="@string/twitter_help_text"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
        <TextView android:id="@+id/twitter_short_code"
                  android:textSize="32sp"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
    </LinearLayout>
</LinearLayout>