<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">
<LinearLayout
              android:id="@+id/wizard_dialcode_root"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              style="@style/wizard_static_panel"
              android:orientation="vertical">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/set_dialcode_label"
              style="@style/wizard_page_title"/>

    <View android:layout_height="1dp"
          android:layout_width="match_parent"
          style="@style/wizard_title_sep"/>

    <EditText android:id="@+id/create_dialcode_edittext"
              android:layout_height="wrap_content"
              android:inputType="number"
              android:password="true"
              android:layout_width="fill_parent"
              android:maxLines="1">
    </EditText>

    <TextView android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:text="@string/set_dialcode_help"
              style="@style/wizard_text"/>

    <TextView android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:text="@string/set_dialcode_detail"
              style="@style/wizard_text"/>
</LinearLayout>
    </ScrollView>
