<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.apb.beacon"
    android:id="@+id/wizard_start_root"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/wizard_static_panel"
        android:orientation="vertical"
        >

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_training_message_title"
            style="@style/wizard_page_title"/>


        <View android:layout_height="1dp"
            android:layout_width="match_parent"
            style="@style/wizard_title_sep"
            />



        <TextView android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/wizard_training_message_details"
            style="@style/welcome_screen_text"
            android:paddingTop="0dp"/>

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="20dp"
            android:layout_weight="1">
            <fragment android:id="@+id/sms_message"
                android:name="com.apb.beacon.common.MessageFragment"
                custom:max_characters="85"
                custom:message_header="@string/emergency_message_header"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
